--- a/options/options.html
+++ b/options/options.html
@@ -145,7 +145,7 @@
         <ul class="childElements">
           <li class="optionContainer">
             <div class="optionText">
-              <p class="checkAnchorLabel">Anchor</p>
+              <p class="anchorLabel">Anchor</p>
             </div>
             <div class="optionForm">
               <label>
@@ -156,7 +156,7 @@
           </li>
           <li class="optionContainer">
             <div class="optionText">
-              <p class="checkOptionLabel">Option</p>
+              <p class="optionLabel">Option</p>
             </div>
             <div class="optionForm">
               <label>
@@ -167,7 +167,7 @@
           </li>
           <li class="optionContainer">
             <div class="optionText">
-              <p class="checkAreaLabel">Area</p>
+              <p class="areaLabel">Area</p>
             </div>
             <div class="optionForm">
               <label>
