Fix title options

--- a/options/options.html
+++ b/options/options.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="options.css">
-    <title>Simple Translate</title>
+    <title>Link Analyzer</title>
     <link rel="icon" type="image/png" href="../icons/icon-app.svg" sizes="16x16">
     <link rel="icon" type="image/png" href="../icons/icon-app.svg" sizes="32x32">
     <link rel="icon" type="image/png" href="../icons/icon-app.svg" sizes="128x128">
